--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://monzikovmaxim.github.io/frontend-challenge/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
