--- a/cat-pinterest/package.json
+++ b/cat-pinterest/package.json
@@ -17,7 +17,7 @@
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://monzikovmaxim.github.io/frontend-challenge/",
+  "homepage": "https://monzikovmaxim.github.io/frontend-challenge/cat-pinterest",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
