--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://monzikovmaxim.github.io/frontend-challenge/cat-pinterest",
+  "homepage": "https://monzikovmaxim.github.io/frontend-challenge/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
